<?xml version="1.0" encoding="utf-8"?>
<!-- Project: com.soylandtech.AnDuelDisk                              -->
<!-- Copyright (c) 2017 Bjorn David Soyland <davidsoyland@gmail.com> -->
<!-- This project is licensed under the terms of the  -->
<!-- GNU GENERAL PUBLIC LICENSE Version 3.0 -->
<!-- File Name: strings.xml -->
<!-- Created: September 26, 2017 01:00 AM EDT -->

<resources>
    <string name="app_name">AnDuelDisk</string>
    <string-array name="lifepointsel">
        <item>2000</item>
        <item>4000</item>
        <item>8000</item>
        <item>16000</item>
    </string-array>
        <string name="startduel">Start Duel</string>
        <string name="lifepoints">Life Points</string>
        <string name="verses">VS</string>
        <string name="player1">Player 1</string>
        <string name="player2">Player 2</string>
        <string-array name="spinplayer1">
            <item>Player 1</item>
        </string-array>
        <string-array name="spinplayer2">
            <item>Player 2</item>
        </string-array>
            <string name="cancel">Cancel</string>
            <string name="ok">OK</string>
            <string name="manageplayers">Manage Players</string>
            <string name="add_player">Add Player</string>
            <string name="noplayers">No Players</string>
            <string name="player_name">Name</string>
            <string name="notes">Notes</string>
            <string name="save_player">Save Player</string>
            <string name="delete_player">Delete Player</string>
            <string name="player_details">&quot;Player Details&quot;</string>
            <string name="wins">Wins:</string>
            <string name="losses">Losses:</string>
            
            
            
            <string name="num9">9</string><string name="num8">8</string><string name="num7">7</string>
            
            <string name="num6">6</string><string name="num5">5</string><string name="num4">4</string><string name="num3">3</string><string name="num2">2</string><string name="num1">1</string><string name="num0">0</string><string name="num0000">0000</string>
            
            
            
            
            
            <string name="num000">000</string>
            <string name="num00">00</string>
            <string name="add">+</string>
            <string name="subtract">-</string>
            <string name="clear">clear</string>
            <string name="halfLP">1/2</string>
            <string name="damage">Damage</string>
            <string name="one_turn_kill">OTK</string>
            <string name="coin">Coin</string>
            <string name="dice">Dice</string>
            <string name="attack">Attack</string>
            <string name="switch_def">Switch to Defence</string>
            <string name="atk">ATK :</string>
            <string name="battlestep">Battle</string>
            <string name="switch_atk">Switch to Attack</string>
            <string name="def">DEF :</string>
            <string name="heads">Heads</string>
            <string name="tap_coin">Tap coin to flip.</string>
            <string name="tap_dice">Tap dice to roll!</string>
</resources>
