<?xml version="1.0" encoding="utf-8"?>
<!-- Project: com.soylandtech.AnDuelDisk                              -->
<!-- Created by Bjorn David Soyland <davidsoyland@gmail.com> -->
<!-- on September 22, 2017 05:27 PM EDT -->
<!-- Copyright (c) 2017 -->
<!-- File Name: playerdetails.xml -->
<!-- -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/player_name"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/edTxtPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/textView1"
            android:background="@android:color/background_light"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
            tools:text="test">

            <requestFocus></requestFocus>
        </EditText>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="true" >

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtPlayerWinsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtPlayerWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/txtPlayerWinsLabel"
                android:text="@string/num0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtPlayerLossesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/losses"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtPlayerLosses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/txtPlayerLossesLabel"
                android:text="@string/num0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txtPlayerNotesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edTxtPlayerNotes"
            android:layout_margin="5dp"
            android:text="@string/notes"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/edTxtPlayerNotes"
            style="@android:style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtPlayerNotesLabel"
            android:layout_margin="5dp"
            android:background="@android:color/background_light"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:singleLine="false"
            android:textColor="@android:color/black">

        </EditText>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <Button
            android:id="@+id/btnCancelPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/cancel"
            android:text="@string/cancel" >
</Button>

        <Button
            android:id="@+id/btnSavePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/filesave"
            android:text="@string/save_player" >
</Button>
    </LinearLayout>
    
</LinearLayout>
