<?xml version="1.0" encoding="utf-8"?>
<!-- Project: com.soylandtech.AnDuelDisk                              -->
<!-- Created by Bjorn David Soyland <davidsoyland@gmail.com> -->
<!-- on September 22, 2017 05:27 PM EDT -->
<!-- Copyright (c) 2017 -->
<!-- File Name: battle.xml -->
<!-- -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orichalcosbg"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtBattleP2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/player2"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBattleP2Pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txtBattleP2Name"
            android:text="@string/atk"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxtBattleP2Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBattleP2Pos"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@android:color/black">

            <requestFocus />
        </EditText>


        <com.soylandtech.andueldisk.libs.MonsterCardView
            android:id="@+id/imgBattleP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtxtBattleP2Amount"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/monstereffect" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <com.soylandtech.andueldisk.libs.MonsterCardView
            android:id="@+id/imgBattleP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:scaleType="matrix"
            android:src="@drawable/monstereffect" />


        <EditText
            android:id="@+id/edtxtBattleP1Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBattleP1"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtBattleP1Pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtxtBattleP1Amount"
            android:text="@string/atk"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtBattleP1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/txtBattleP1Pos"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/player1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>